# rust-mediaplayer

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml  build.yml
src/: app.rs  decoder.rs  main.rs  player.rs  ui.rs
