[package]
name = "rust-mediaplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = ["glow"] }
libmpv2 = "6.0.0"
anyhow = "1.0"
raw-window-handle = "0.6"

[profile.release]
opt-level = "s"         # Optimize for minimal memory footprint and size
lto = true              # Deep Link-Time Optimization
codegen-units = 1       # Single-threaded code generation for max optimization
panic = "abort"         # Strip unwinding tables
strip = true            # Hard strip symbols out of the executable
