[package]
name = "rust-mediaplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Activates eframe with the native OpenGL/Glow window management hooks
eframe = { version = "0.27", features = ["glow"] }

# Explicitly pull in egui_glow to get access to native canvas paint callbacks
egui_glow = "0.27"

# Critical: You must tell libmpv2 to expose its internal OpenGL Init bindings
libmpv2 = { version = "6.0.0", features = ["render"] }

[profile.release]
opt-level = 3           # Maximize pure execution speed (replaces "s")
lto = true              # Deep Link-Time Optimization across all crates
codegen-units = 1       # Reduces parallelism to allow maximum compiler optimization
panic = "abort"         # Removes stack unwinding overhead for raw speed and smaller binary
strip = true            # Hard strip all symbols out of the final executable
